<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e51c23" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/description"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imgLogo"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:alpha="0"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />
    
    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgLogo"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_alignStart="@+id/imgLogo"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:background="#00000000" 
        android:alpha="0"
        android:onClick="playClick"
        android:text="@string/play" />
    
    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgLogo"
        android:layout_alignRight="@+id/imgLogo"
        android:layout_alignEnd="@+id/imgLogo"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:background="#00000000"
        android:alpha="0"
        android:onClick="helpClick"
        android:text="@string/help" />
    
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:padding="5sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/version" />
    <ScrollView 
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/version" >
	    <TextView
	        android:id="@+id/credits"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        
	        android:textColor="#FFFFFF"
	        android:alpha="1"
	        android:gravity="center"
	        
	        android:text="@string/developer" />
    </ScrollView>
    
    <TextView
        android:id="@+id/loading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scrollview"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:alpha="0"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/loading" />

</RelativeLayout>