<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4" >
	    <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:padding="5sp"
	            android:textSize="15sp"
	            android:textColor="#000000"
	            android:gravity="center"
	            android:text="@string/help_text8" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4" >
	    <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:padding="5sp"
	            android:textSize="15sp"
	            android:textColor="#000000"
	            android:gravity="center"
	            android:text="@string/help_text9" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#eeeeee"
        android:layout_weight="1" >
	    <ImageView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/help_five"
	        android:contentDescription="@string/description" />
    </LinearLayout>
</LinearLayout >
