<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e51c23" >

    <!-- 
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:textColor="#FFFFFF"
        android:background="#00000000"
        android:textSize="30sp"
        android:text="@string/new_game" />
        -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:text="@string/score"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:text="@string/description"
        android:textSize="35sp" />
    
    
    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#00000000" >

        <View
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/newGame"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:onClick="newGame"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@id/ViewColorPickerHelper"
            android:layout_toStartOf="@id/ViewColorPickerHelper"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/mainMenu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:onClick="mainMenu"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/ViewColorPickerHelper"
            android:layout_toEndOf="@id/ViewColorPickerHelper"
            android:text="@string/main_menu" />
    </RelativeLayout>

</RelativeLayout>